<resources>
    <string name="app_name">Chempionat</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sign">Sign Up</string>
    <string name="onboard1_small">Enjoy quick pick-up and delivery to your destination</string>
    <string name="onboard1_big">Quick Delivery At Your Doorstep</string>
    <string name="onboard2_small">Different modes of payment either before and after delivery without stress</string>
    <string name="onboard2_big">Flexible Payment</string>
    <string name="onboard3_small">Track your packages/items from the comfort of your home till final destination</string>
    <string name="onboard3_big">Real-time Tracking</string>
    <string name="FIO">Ivanov Ivan</string>
    <string name="Phone">+7(999)999-99-99</string>
    <string name="email">***********@mail.com</string>
    <string name="password">**********</string>
    <string name="confirm">**********</string>
</resources>