<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Onboard1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/in_no_time_pana_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="59dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="51dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/onboard1_big"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="262dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/onboard1_small"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:onClick="skipHolder"
        android:text="@string/skip"
        android:textColor="@color/blue"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:strokeColor="#0560FA"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto_medium"
        android:onClick="next"
        android:text="@string/next"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>